Fix logo width on mobiles

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1856,7 +1856,7 @@ nav select {
 		margin-top: 30px;	
 	}
 	
-	#logo img {width:300px;}
+	#logo img {width: 105%;}
 		
 	#introduction p {
 		font-size: 17px;
